--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,10 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Testing</title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
-Testing
+<h1>Testing</h1>
 </body>
 </html>
