--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -3,10 +3,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Testing</title>
+    <title>Welcome to Yaksh's Personal Website!</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    {% block head %}
+    {% endblock head %}
 </head>
 <body>
-<h1>Testing</h1>
+{#<h1>Testing</h1>#}
+{% block content %}
+{#    <h1>Hello world</h1>#}
+{% endblock content %}
 </body>
 </html>
