--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,6 @@
 {% endblock head %}
 
 {% block content %}
-    <h1>Hello world!</h1>
+{#    <h1>Hello world!</h1>#}
+    <h1>Hi, I am {{ people.first_name }} {{ people.last_name }}!</h1>
 {% endblock content %}
