changed people to person in views and home template

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,5 +6,5 @@
 
 {% block content %}
 {#    <h1>Hello world!</h1>#}
-    <h1>Hi, I am {{ people.first_name }} {{ people.last_name }}!</h1>
+    <h1>Hi, I am {{ person.first_name }} {{ person.last_name }}!</h1>
 {% endblock content %}
