--- a/templates/home.html
+++ b/templates/home.html
@@ -7,4 +7,5 @@
 {% block content %}
 {#    <h1>Hello world!</h1>#}
     <h1>Hi, I am {{ person.first_name }} {{ person.last_name }}!</h1>
+    {{ person.picture_background_removed }}
 {% endblock content %}
