--- a/templates/project/project_showcase.html
+++ b/templates/project/project_showcase.html
@@ -3,8 +3,13 @@
 
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/project_showcase.css' %}">
+    <title>Yaksh's Projects</title>
 {% endblock head %}
 
 {% block content %}
-
+    {% for project in projects %}
+        <h1>{{ project.title }}</h1>
+        <img src="{{ project.cover_image.url }}" alt="{{ project.title }}'s cover image">
+        <p>{{ project.description }}</p>
+    {% endfor %}
 {% endblock content %}
