--- a/templates/home.html
+++ b/templates/home.html
@@ -6,8 +6,10 @@
 
 {% block content %}
 {#    <h1>Hello world!</h1>#}
-    <div class="Introduction">
-        <h1>Hi, I am {{ person.first_name }} {{ person.last_name }}!</h1>
-        <img src="{{ person.picture_background_removed.url }}" alt="image of me with background removed">
+    <div class="page">
+        <div class="Introduction">
+            <h1>Hi, I am {{ person.first_name }} {{ person.last_name }}!</h1>
+            <img src="{{ person.picture_background_removed.url }}" alt="image of me with background removed">
+        </div>
     </div>
 {% endblock content %}
