--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 {#    <h1>Hello world!</h1>#}
     <div class="page">
         <div class="Introduction">
-            <h1>Hi, I am {{ person.first_name }} {{ person.last_name }}!</h1>
+            <h1>Hello, I am {{ person.first_name }} {{ person.last_name }}!</h1>
             <img src="{{ person.picture_background_removed.url }}" alt="image of me with background removed">
         </div>
     </div>
