--- a/main/static/css/home.css
+++ b/main/static/css/home.css
@@ -14,28 +14,28 @@ body {
 .Introduction h1 {
     font-weight: 200;
     width: 90%;
-    font-size: 75px;
+    font-size: 500%;
     text-align: center;
     z-index: -1;
     margin: 0 auto;
-    overflow: hidden;
+    /*overflow: hidden;*/
     height: 110px;
     /*border-right: 0.07em solid black;*/
     /*animation: typing 10s linear infinite forwards;*/
 }
 
-@keyframes typing {
-    0% { transform: scaleX(0)}
-    /*10% { width: 0 }*/
-    25% { transform: scaleX(100%) }
-    75% { transform: scaleX(100%) }
-    90% { transform: scaleX(0) }
-    100% { transform: scaleX(0) }
-    }
+/*@keyframes typing {*/
+/*    0% { transform: scaleX(0)}*/
+/*    !*10% { width: 0 }*!*/
+/*    25% { transform: scaleX(100%) }*/
+/*    75% { transform: scaleX(100%) }*/
+/*    90% { transform: scaleX(0) }*/
+/*    100% { transform: scaleX(0) }*/
+/*    }*/
 
 .Introduction img {
     z-index: 1;
-    margin-top: -195px;
+    /*margin-top: -195px; reduces the image not the text */
     /*width: 55%;*/
     max-width: 100%;
     height: auto;
