--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -7,8 +7,10 @@
     <meta charset="UTF-8">
     <title>Welcome to Yaksh's Personal Website!</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 </head>
 <body>
+{% include 'base/navbar.html' %}
 {#<h1>Testing</h1>#}
 {% block content %}
 {#    <h1>Hello world</h1>#}
