made a darker theme for the website

--- a/main/static/css/base.css
+++ b/main/static/css/base.css
@@ -12,3 +12,8 @@
     font-family: "Abril FatFace";
     src: url("../font/Abril Fatface/AbrilFatface-Regular.ttf") format("truetype");
 }
+
+body {
+    background-color: #152033;
+    color: antiquewhite;
+}
