--- a/main/static/css/home.css
+++ b/main/static/css/home.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Abril FatFace", sans-serif;
+    font-family: "San Fransisco", sans-serif;
 }
 
 .page {
@@ -12,6 +12,7 @@ body {
 }
 
 .Introduction h1 {
+    font-family: "Abril FatFace", sans-serif;
     font-weight: 200;
     width: 90%;
     font-size: 500%;
