added header image block

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,4 +1,6 @@
 <header class="navbar">
+    {% block header_image %}
+    {% endblock header_image %}
     <ul class="nav_links">
         <li><a href="/">Home</a></li>
         <li><a href="/projects">Projects</a></li>
