added header image

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,6 +1,5 @@
 <header class="navbar">
-    {% block header_image %}
-    {% endblock header_image %}
+    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_light_color_272x92dp.png">
     <ul class="nav_links">
         <li><a href="/">Home</a></li>
         <li><a href="/projects">Projects</a></li>
