--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <title>Welcome to Yaksh's Personal Website!</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+{#    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">#}
 </head>
 <body>
 {% include 'base/navbar.html' %}
