--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,3 +1,6 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+
 <header class="navbar">
     <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_light_color_272x92dp.png">
     <ul class="nav_links">
