--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 
 <header class="navbar">
-    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_light_color_272x92dp.png">
+    <img src="{% static 'img/header.png' %}" alt="header image">
     <ul class="nav_links">
         <li><a href="/">Home</a></li>
         <li><a href="/projects">Projects</a></li>
