--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -2,9 +2,9 @@
 <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 
 <header class="navbar">
-    <img src="{% static 'img/header.png' %}" alt="header image">
+    <a href="/" class="header_links"><img src="{% static 'img/header.png' %}" alt="Home"></a>
     <ul class="nav_links">
-        <li><a href="/">Home</a></li>
+{#        <li><a href="/">Home</a></li>#}
         <li><a href="/projects">Projects</a></li>
     </ul>
 </header>
