--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -6,5 +6,6 @@
     <ul class="nav_links">
 {#        <li><a href="/">Home</a></li>#}
         <li><a href="/projects">Projects</a></li>
+        <li><a href="/about">About</a></li>
     </ul>
 </header>
