--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <title>Welcome to Yaksh's Personal Website!</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.png' %}">
 {#    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">#}
 </head>
 <body>
