made a good-looking card with functional button

--- a/templates/project/project_showcase.html
+++ b/templates/project/project_showcase.html
@@ -13,7 +13,9 @@
                 <h1>{{ project.title }}</h1>
                 <img src="{{ project.cover_image.url }}" alt="{{ project.title }}'s cover image">
                 <p>{{ project.description }}</p>
-                <button class="more-button"><a href="/projects/{{ project.title }}/">More</a></button>
+                <a href="/projects/{{ project.title }}/" target="_blank">
+                    <button type="button" class="more-button">More ↗</button>
+                </a>
             </div>
         {% endfor %}
     </div>
