--- a/main/static/css/project_showcase.css
+++ b/main/static/css/project_showcase.css
@@ -16,12 +16,15 @@
     margin: 15px;
     border-radius: 10px;
     backdrop-filter: blur(2px);
+    background-color: #7f96cc;
     box-shadow: black 0 0 5px;
     /*flex: 0 1 24%;*/
 }
 
 .project_card h1 {
     font-size: 50px;
+    font-family: "Abril FatFace", sans-serif;
+    font-weight: 200;
     margin: 15px;
 }
 
@@ -32,4 +35,12 @@
 .project_card img {
     height: 150px;
     border-radius: 10px;
+}
+
+.more-button {
+    border: none; border-radius: 15px;
+    height: 50px; width: 80px;
+    background-color: #4d6594;
+    box-shadow: #6c81ab 0 0 5px;
+    margin: 5px 25px 25px 25px;
 }
