--- a/main/static/css/project_preview.css
+++ b/main/static/css/project_preview.css
@@ -17,6 +17,11 @@
     margin: 0 0 30px 0;
 }
 
+.project p {
+    width: 75%;
+    margin: 16px auto 16px auto;
+}
+
 .project h1{
     font-family: "Abril FatFace", sans-serif;
     font-weight: 200;
