--- a/main/static/css/project_showcase.css
+++ b/main/static/css/project_showcase.css
@@ -16,7 +16,7 @@
     margin: 15px;
     border-radius: 10px;
     backdrop-filter: blur(2px);
-    background-color: #7f96cc;
+    background-color: #0d131f; /*7f96cc*/
     box-shadow: black 0 0 5px;
     /*flex: 0 1 24%;*/
 }
@@ -29,7 +29,8 @@
 }
 
 .project_card p {
-    margin: 15px;
+    margin: 15px auto 15px auto;
+    width: 400px;
 }
 
 .project_card img {
