--- a/templates/project/project_showcase.html
+++ b/templates/project/project_showcase.html
@@ -13,7 +13,7 @@
                 <h1>{{ project.title }}</h1>
                 <img src="{{ project.cover_image.url }}" alt="{{ project.title }}'s cover image">
                 <p>{{ project.description }}</p>
-                <a href="/projects/{{ project.title }}/" target="_blank">
+                <a href="/projects/{{ project.title }}/">
                     <button type="button" class="more-button">More ↗</button>
                 </a>
             </div>
