--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -3,6 +3,16 @@
 
 <header class="navbar">
     <a href="/" class="header_links"><img src="{% static 'img/header.png' %}" alt="Home"></a>
+
+    <div class="social_links">
+        <a href="https://www.instagram.com/_yaksh396.phs/">
+            <img src="{% static 'img/Instagram_logo.webp' %}" alt="Instagram">
+        </a>
+        <a href="https://yakshsjournal.blogspot.com/">
+            <img src="{% static 'img/blogger.png' %}" alt="Instagram">
+        </a>
+    </div>
+
     <ul class="nav_links">
 {#        <li><a href="/">Home</a></li>#}
         <li><a href="/projects">Projects</a></li>
