--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -16,6 +16,8 @@
     <ul class="nav_links">
 {#        <li><a href="/">Home</a></li>#}
         <li><a href="/projects">Projects</a></li>
+        <li><a href="/">Academics</a></li>
+        <li><a href="/">R&D</a></li>
         <li><a href="/about">About</a></li>
     </ul>
 </header>
