--- a/main/static/css/navbar.css
+++ b/main/static/css/navbar.css
@@ -16,6 +16,7 @@
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(2px);
     top: 15px;
+    font-family: "San Fransisco", sans-serif;
 }
 
 ul, li, a {
