--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -8,6 +8,7 @@
     <title>Welcome to Yaksh's Personal Website!</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.png' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 {#    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">#}
 </head>
 <body>
