--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -4,20 +4,23 @@
 <header class="navbar">
     <div class="home_socials">
         <a href="/" class="header_links"><img src="{% static 'img/header.png' %}" alt="Home"></a>
-        <div class="social_links">
-            <a href="https://www.instagram.com/_yaksh396.phs/" class="social_links_img">
-                <img src="{% static 'img/Instagram_logo.webp' %}" alt="Instagram">
-            </a>
-            <a href="https://yakshsjournal.blogspot.com/" class="social_links_img">
-                <img src="{% static 'img/blogger.png' %}" alt="Blog">
-            </a>
-        </div>
+{#        <div class="social_links">#}
+{#            <a href="https://www.instagram.com/_yaksh396.phs/" class="social_links_img">#}
+{#                <img src="{% static 'img/Instagram_logo.webp' %}" alt="Instagram">#}
+{#            </a>#}
+{#            <a href="https://yakshsjournal.blogspot.com/" class="social_links_img">#}
+{#                <img src="{% static 'img/blogger.png' %}" alt="Blog">#}
+{#            </a>#}
+{#        </div>#}
     </div>
-    <ul class="nav_links">
+
+    <a class="nav_links" href="/">Links</a>
+
+{#    <ul class="nav_links">#}
 {#        <li><a href="/">Home</a></li>#}
-        <li><a href="/projects">Projects</a></li>
-        <li><a href="/">Academics</a></li>
-        <li><a href="/">R&D</a></li>
-        <li><a href="/about">About</a></li>
-    </ul>
+{#        <li><a href="/projects">Projects</a></li>#}
+{#        <li><a href="/">Academics</a></li>#}
+{#        <li><a href="/">R&D</a></li>#}
+{#        <li><a href="/about">About</a></li>#}
+{#    </ul>#}
 </header>
