--- a/templates/base/links.html
+++ b/templates/base/links.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html' %}
 
 {% block head %}
-    <title>This is the links page!</title>
+    <title>Yaksh's Links</title>
 {% endblock head %}
