--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -14,7 +14,7 @@
 {#        </div>#}
     </div>
 
-    <a class="nav_links" href="links/">Links</a>
+    <a class="nav_links" href="/links/">Links</a>
 
 {#    <ul class="nav_links">#}
 {#        <li><a href="/">Home</a></li>#}
