--- a/templates/base/links.html
+++ b/templates/base/links.html
@@ -21,6 +21,12 @@
 
         <div class="social_links_page">
             <h1>Social Media Handles</h1>
+            <div class="social_links_site">
+                <a href="https://www.instagram.com/_yaksh396.phs/" target="_blank"><img src="{% static 'img/Instagram_logo.webp' %}"></a>
+                <a href="https://yakshsjournal.blogspot.com/" target="_blank"><img src="{% static 'img/blogger.png' %}"></a>
+{#                <a href=""></a>#}
+{#                <a href=""></a>#}
+            </div>
         </div>
     </div>
 {% endblock content %}
