--- a/templates/project/project_preview.html
+++ b/templates/project/project_preview.html
@@ -17,7 +17,7 @@
             <h2>Discipline Of Work:</h2>
             <p>{{ project.discipline_of_work }}</p>
             <h2>Youtube:</h2>
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/{{ project.youtube_video }}"
+            <iframe src="https://www.youtube-nocookie.com/embed/{{ project.youtube_video }}"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
