--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -24,3 +24,10 @@
 {#        <li><a href="/about">About</a></li>#}
 {#    </ul>#}
 </header>
+
+<div class="sidebar">
+    <a title="Projects" href="/projects">🦾</a>
+    <a title="Academics" href="/">💯</a>
+    <a title="Research & Development" href="/">📃</a>
+    <a title="About & Contact" href="/about">🧑</a>
+</div>
