--- a/main/static/css/navbar.css
+++ b/main/static/css/navbar.css
@@ -75,3 +75,23 @@ li {
     height: 3rem;
     transform: translate(3px, 45%);
 }
+
+.sidebar {
+    position: fixed;
+    top: 50%; right: 0;
+    transform: translate(0, -50%);
+    border-radius: 10px 0 0 10px;
+    background-color: rgba(14,20,31,0.85);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 65px;
+    z-index: 998;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(2px);
+}
+
+.sidebar a {
+    font-size: 2rem;
+    padding: 10px;
+}
