added bottom bar (dock)

--- a/main/static/css/navbar.css
+++ b/main/static/css/navbar.css
@@ -12,10 +12,10 @@
     /*margin-top: -7.5px; fix*/
     width: 98%;
     /*margin: 15px;*/
-    border-radius: 25px;
+    border-radius: 0 0 25px 25px;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(2px);
-    top: 15px;
+    top: 0;
     font-family: "San Fransisco", sans-serif;
 }
 
@@ -92,6 +92,26 @@ li {
 }
 
 .sidebar a {
+    font-size: 2rem;
+    padding: 10px;
+}
+
+.dock {
+    position: fixed;
+    bottom: 0; left: 50%;
+    transform: translate(-50%, 0);
+    border-radius: 10px 10px 0 0;
+    background-color: rgba(14,20,31,0.85);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 300px;
+    z-index: 998;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(2px);
+}
+
+.dock a {
     font-size: 2rem;
     padding: 10px;
 }
