--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -25,7 +25,14 @@
 {#    </ul>#}
 </header>
 
-<div class="sidebar">
+{#<div class="sidebar">#}
+{#    <a title="Projects" href="/projects">🦾</a>#}
+{#    <a title="Academics" href="/">💯</a>#}
+{#    <a title="Research & Development" href="/">📃</a>#}
+{#    <a title="About & Contact" href="/about">🧑</a>#}
+{#</div>#}
+
+<div class="dock">
     <a title="Projects" href="/projects">🦾</a>
     <a title="Academics" href="/">💯</a>
     <a title="Research & Development" href="/">📃</a>
