updated to robotics emoji for all devices

--- a/templates/base/links.html
+++ b/templates/base/links.html
@@ -12,7 +12,7 @@
         <div class="site_links_page">
         <h1>Links for this site</h1>
             <div class="site_links">
-                <a href="/projects">🦾 Projects</a>
+                <a href="/projects">🤖 Projects</a>
                 <a href="/">💯 Academics</a>
                 <a href="/">📃 R&D</a>
                 <a href="/about">🧑 About</a>
