--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -33,7 +33,7 @@
 {#</div>#}
 
 <div class="dock">
-    <a title="Projects" href="/projects">🦾</a>
+    <a title="Projects" href="/projects">🤖</a>
     <a title="Academics" href="/">💯</a>
     <a title="Research & Development" href="/">📃</a>
     <a title="About & Contact" href="/about">🧑</a>
