added space in the bottom, to make text more readable & in the center

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,7 @@
             <h1>Hello, I am {{ person.first_name }} {{ person.last_name }}!</h1>
             <img src="{{ person.picture_background_removed.url }}" alt="image of me with background removed">
             <p>{{ homepageinfo.introduction_description }}</p>
+            <div class="bottom_space"></div>
         </div>
     </div>
 {% endblock content %}
