--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -37,4 +37,10 @@
     <a title="Academics" href="/">💯</a>
     <a title="Research & Development" href="/">📃</a>
     <a title="About & Contact" href="/about">🧑</a>
+    <a href="https://www.instagram.com/_yaksh396.phs/" class="">
+        <img src="{% static 'img/Instagram_logo.webp' %}" alt="Instagram">
+    </a>
+    <a href="https://yakshsjournal.blogspot.com/" class="">
+        <img src="{% static 'img/blogger.png' %}" alt="Blog">
+    </a>
 </div>
