--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -37,10 +37,10 @@
     <a title="Academics" href="/">💯</a>
     <a title="Research & Development" href="/">📃</a>
     <a title="About & Contact" href="/about">🧑</a>
-    <a href="https://www.instagram.com/_yaksh396.phs/" class="">
+    <a href="https://www.instagram.com/_yaksh396.phs/" class="social_media_images_docks">
         <img src="{% static 'img/Instagram_logo.webp' %}" alt="Instagram">
     </a>
-    <a href="https://yakshsjournal.blogspot.com/" class="">
+    <a href="https://yakshsjournal.blogspot.com/" class="social_media_images_docks">
         <img src="{% static 'img/blogger.png' %}" alt="Blog">
     </a>
 </div>
