added home icon in the dock

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -33,6 +33,9 @@
 {#</div>#}
 
 <div class="dock">
+    <a href="/">
+        <img src="{% static 'img/favicon.png' %}" alt="Home">
+    </a>
     <a title="Projects" href="/projects">🤖</a>
     <a title="Academics" href="/">💯</a>
     <a title="Research & Development" href="/">📃</a>
