added back links

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -14,7 +14,8 @@
 {#        </div>#}
     </div>
 
-    <a class="nav_links" href="/links/">Links</a>
+{#    <a class="nav_links" href="/links/">Links</a>#}
+    <a class="nav_links" href="javascript:history.back()">↖ Back</a>
 
 {#    <ul class="nav_links">#}
 {#        <li><a href="/">Home</a></li>#}
