--- a/main/static/css/project_showcase.css
+++ b/main/static/css/project_showcase.css
@@ -1,9 +1,7 @@
 .projects {
     display: flex;
     flex-wrap: wrap;
-    position: absolute;
-    left: 50%; top: 100px;
-    transform: translate(-50%, 0);
+    position: relative;
     width: 100%;
     justify-content: space-evenly;
 }
@@ -53,4 +51,27 @@
 
 .description {
     font-family: "San Fransisco", sans-serif;
+}
+
+.page {
+    display: flex;
+    position: absolute;
+    top: 100px;
+    left: 50%; transform: translateX(-50%);
+    width: 95%;
+    height: auto;
+    justify-content: center;
+    text-align: center;
+    flex-wrap: wrap;
+    padding-bottom: 75px;
+}
+
+.basic-info {
+    width: 95%;
+    position: relative;
+    font-size: 1.2rem;
+}
+
+.basic-info h1 {
+    margin: 0 20px 20px 20px;
 }
