updated academics icons to link to academics page

--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -38,7 +38,7 @@
         <img src="{% static 'img/favicon.png' %}" alt="Home">
     </a>
     <a title="Projects" href="/projects">🤖</a>
-    <a title="Academics" href="/">💯</a>
+    <a title="Academics" href="academics/">💯</a>
     <a title="Research & Development" href="/">📃</a>
     <a title="About & Contact" href="/about">🧑</a>
     <a href="https://www.instagram.com/_yaksh396.phs/" class="social_media_images_docks">
